--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">SuitmediaMobileTest</string>
+    <string name="app_name">MESSAGE FROM COD</string>
+    <string name="text_with_paragraphs">
+        Hello fellas, arane nyong mbuh sapa
+        tapi biasane diarani kucing. Soale
+        raine kaya kucing men. mbuh tah asline
+        dadi kaya wong asline eman men asem.
+    </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
